[package]
name = "onsnes"
version = "0.1.0"
description = "Onsnes — a Token-2022 transfer hook maintaining a Bayesian posterior over price"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "onsnes"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"
spl-token-2022 = "3.0.2"
